# mongomini

./: LICENSE  README.md  pyproject.toml  setup.py
mongomini/: __about__.py  __init__.py  attrs.py  config.py  cursors.py  dataclasses.py  documents.py  exceptions.py  indexes.py  iters.py  meta.py  query.py  utils.py
tests/: test_dataclasses.py  test_document_classes.py  test_document_intances.py  test_documents.py
