[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mongomini"
version = "23.4.0-a"
authors = [
  { name="Ryan Kroon", email="rykroon.tech@gmail.com" },
]
description = "A minimalistic async MongoDB Object Mapping using Python dataclasses."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "motor==3.1.*"
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"